@@ -4,10 +4,10 @@
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
 .\"      Date: 09/18/2016
 .\"    Manual: \ \&
-.\"    Source: \ \& 1.0.5
+.\"    Source: \ \& 1.0.6-dev
 .\"  Language: English
 .\"
-.TH "MCABBER" "1" "09/18/2016" "v1\&.0\&.5"
+.TH "MCABBER" "1" "09/18/2016" "v1\&.0\&.6\-dev"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -1418,7 +1418,7 @@ Written by \m[blue]\fBMikael BERTHE\fR\m[]\&\s-2\u[1]\d\s+2 and others (see AUTH
 \m[blue]\fBMCabber MUC room\fR\m[]\&\s-2\u[4]\d\s+2
 .SH "COPYING"
 .sp
-Copyright (C) 2005\-2016 Mikael Berthe and others\&.
+Copyright (C) 2005\-2017 Mikael Berthe and others\&.
 .sp
 Free use of this software is granted under the terms of the GNU General Public License (GPL)\&.
 .SH "NOTES"
