@@ -2608,7 +2608,7 @@ Please visit our website to find out about the MUC room and the bug tracker.</p>
 </div>
 <h2 id="_copying">COPYING</h2>
 <div class="sectionbody">
-<div class="paragraph"><p>Copyright (C) 2005-2016 Mikael Berthe and others.<br /></p></div>
+<div class="paragraph"><p>Copyright (C) 2005-2017 Mikael Berthe and others.<br /></p></div>
 <div class="paragraph"><p>Free use of this software is granted under the terms of the GNU General Public
 License (GPL).</p></div>
 </div>
@@ -2616,7 +2616,7 @@ License (GPL).</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Version 1.0.5<br />
+Version 1.0.6-dev<br />
 Last updated 2016-09-17 20:57:35 CEST
 </div>
 </div>
